# damai_CLI

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRACTS.md  LICENSE  README.md  SCHEMA.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml
damai_cli/: auth.py  browser_cookie.py  cli.py  client.py  config.py  cookies.py  exceptions.py  filter.py  formatter.py  models.py  output.py  password_login.py  qr_login.py  signing.py
damai_cli/commands/: _common.py  account.py  auth.py  reading.py  track.py  trade.py
tasks/: todo.md
tests/: _integration_check.py  conftest.py  test_cookies.py  test_offline_smoke.py  test_output.py  test_signing.py
tools/: capture_mtop.py  capture_mtop_v2.py  capture_params.py  probe_api.py
